<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sevens</string>
    <string name="str_amd_url">https://amd.spbstu.ru/</string>
    <string name="action_settings">Settings</string>
    <string name="str_depth">Applied Math Department</string>
    <string name="str_university1">Peter the Great St.Petersburg</string>
    <string name="str_university2">Politechnic University</string>
    <string name="str_toweb">To web site</string>
    <string name="str_start">Start</string>

    <string name="str_restart">Restart</string>
    <string name="str_score">Score</string>
    <string name="str_moves">Moves</string>
    <string name="str_total">Total</string>
    <string name="str_combo">Combo</string>
    <string name="menu">Menu</string>

    <string name="tap_again_to_exit">Tap again to exit</string>
    <string name="game_back_toast_text">Tap again to go main menu</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="help">Help</string>
    <string name="authors">Authors</string>
    <string name="game_spacer"></string>
    <string name="play">Play</string>
    <string name="game_over">Game Over</string>
    <string name="main_menu">Main Menu</string>
    <string name="give_up">End Game</string>
    <string name="settings_title">Settings</string>
    <string name="language">Язык</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="sound">Sounds</string>
    <string name="try_again">Res</string>
    <string name="score">Score: </string>
    <string name="high_score">High score: </string>

    <string name="help_info">file:///android_asset/help_eng.html</string>

</resources>
