<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient">
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/background_frame"
        android:padding="30dp"
        android:weightSum="1"
        tools:layout_editor_absoluteX="-30dp"
        tools:layout_editor_absoluteY="-250dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:orientation="horizontal"
            android:layout_weight="0.2">

            <ImageView
                android:id="@+id/settings_back_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="0.2"
                android:background="@drawable/btn_blue_darkblue_violet"
                android:padding="10dp"
                android:src="@android:drawable/ic_menu_revert" />

            <TextView
                android:id="@+id/settings_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center"
                android:text="@string/settings_title"
                android:textColor="@color/White"
                android:textSize="40dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:orientation="vertical"
            android:layout_weight="0.6"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:orientation="horizontal"
                android:layout_weight="0.2"
                android:weightSum="1"
                android:gravity="left">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:orientation="horizontal"
                android:layout_weight="0.2"
                android:gravity="center"
                android:weightSum="1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:orientation="horizontal"
                android:layout_weight="0.2"
                android:weightSum="1"
                android:gravity="center">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/sound"
                    android:textColor="@color/White"
                    android:textSize="16sp" />

                <com.example.sevens.ViewSoundButton
                    android:id="@+id/settings_sound"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3">
                </com.example.sevens.ViewSoundButton>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:orientation="horizontal"
                android:layout_weight="0.2"
                android:gravity="center"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/music"
                    android:textColor="@color/White"
                    android:textSize="16sp" />

                <com.example.sevens.ViewMusicButton
                    android:id="@+id/settings_music"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3">
                </com.example.sevens.ViewMusicButton>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:orientation="horizontal"
            android:layout_weight="0.2"
            android:gravity="center">

            <Button
                android:id="@+id/settings_for_Stuff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="for Stuff"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>