<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient">
    </TableLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/background_frame"
        android:padding="30dp"
        tools:layout_editor_absoluteX="-30dp"
        tools:layout_editor_absoluteY="-250dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="false"
                android:gravity="clip_horizontal|center|center_vertical"
                android:padding="12dp"
                android:text="@string/app_name"
                android:textColor="@color/White"
                android:textSize="60sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="0.1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:orientation="horizontal"
                android:layout_weight="0.4"
                android:weightSum="1.0"
                android:gravity="center_vertical">
            <com.example.sevens.ViewSoundButton
                android:id="@+id/main_menu_sound_btn"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.5">

            </com.example.sevens.ViewSoundButton>

            <com.example.sevens.ViewMusicButton
                android:id="@+id/main_menu_music_btn"
                android:layout_width="0px"
                android:layout_margin="5dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
            </com.example.sevens.ViewMusicButton>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="0.5"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/main_btn_start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_red_orange_yellow"
                    android:padding="10dp"
                    android:text="@string/start"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/main_btn_toSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_yellow_green_blue"
                    android:padding="10dp"
                    android:text="@string/action_settings"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/main_btn_toLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_blue_darkblue_violet"
                    android:padding="10dp"
                    android:text="@string/watch_logo"
                    android:textSize="20sp" />
            </LinearLayout>


            <!--
            <Button
                android:id="@+id/main_btn_toLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/about_button"
                android:padding="10dp"
                android:text="@string/watch_logo"
                android:textSize="20sp" />
                -->


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>